Log management command execution